[package]
name = "linktype"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A simply and publicly managed enum for different link types present in PCAP files."
repository = "https://github.com/starkbamse/linktype"
keywords = ["network", "pcap", "linktype"]
categories = ["network-programming"]

[dependencies]
num_enum = "0.7.3"
